fix(button): margin overlapping content

--- a/packages/components/button/src/styles/index.module.scss
+++ b/packages/components/button/src/styles/index.module.scss
@@ -44,8 +44,8 @@
 .icon {
   display: inline-flex;
   align-items: center;
-  margin-right: theme.get-spacing(1);
-  margin-left: theme.get-spacing(-1);
+  margin-left: theme.get-spacing(1);
+  margin-right: theme.get-spacing(-1);
 }
 
 // Sizes
